--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@mui/icons-material": "^5.10.6",
     "@mui/joy": "^5.0.0-alpha.49",
     "@mui/material": "^5.10.7",
