--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-slick": "^0.29.0",
     "react-slideshow-image": "^4.0.5",
     "react-stripe-checkout": "^2.6.3",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
