--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/joy": "^5.0.0-alpha.49",
     "@mui/material": "^5.10.7",
     "@mui/styled-engine-sc": "^5.10.6",
+    "@mui/x-data-grid": "^5.17.10",
     "@stripe/react-stripe-js": "^1.14.1",
     "@stripe/stripe-js": "^1.42.0",
     "@testing-library/jest-dom": "^5.16.5",
